fixes bug 189570 "Aborting a page load causes untransferred content that already exists to be doomed from the disk cache" r=biesi sr=bzbarsky